src/snapshots/mosh__parser__tests__msh4_ascii_header.snap
---
source: src/parser.rs
expression: parse_header(&first_four_lines(path).unwrap()).unwrap()
---
MshHeader {
    version: V41,
    storage: Ascii,
    size_t: EightBytes,
}
