src/snapshots/mosh__parser__tests__msh4_binary_header.snap
---
source: src/parser.rs
expression: parse_header(&first_four_lines(path).unwrap()).unwrap()
---
MshHeader {
    version: V41,
    storage: BinaryLe,
    size_t: EightBytes,
}
