src/snapshots/mosh__parser__tests__trailing_spaces.snap
---
source: src/parser.rs
expression: parse_node_msh2(inp).unwrap().1
---
Node {
    tag: 101,
    x: 0.0,
    y: 1.0,
    z: 100.0,
}
