src/snapshots/mosh__parser__tests__unix_line_endings.snap
---
source: src/parser.rs
expression: parse_header(&first_four_lines(path).unwrap()).unwrap()
---
MshHeader {
    version: V22,
    storage: Ascii,
    size_t: EightBytes,
}
